[package]
name = "torrust-serde-bencode"
description = "A Serde backed Bencode encoding/decoding library for Rust."
version = "0.2.3"
authors = ["Toby Padilla <tobypadilla@gmail.com>", "Nautilus Cyberneering <info@nautilus-cyberneering.de>"]
repository = "https://github.com/torrust/torrust-serde-bencode"
documentation = "https://docs.rs/torrust-serde-bencode/"
license = "MIT"
keywords = ["bencode", "serialize", "deserialize", "serde"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_bytes = "0.11"

[dev-dependencies]
serde_derive = "1.0"
