[package]
name = "serde_bencode"
description = "A Serde backed Bencode encoding/decoding library for Rust."
version = "0.2.4"
authors = ["Toby Padilla <tobypadilla@gmail.com>", "Nautilus Cyberneering <info@nautilus-cyberneering.de>"]
repository = "https://github.com/toby/serde-bencode"
documentation = "https://docs.rs/serde_bencode/"
license = "MIT"
keywords = ["bencode", "serialize", "deserialize", "serde"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_bytes = "0.11"

[dev-dependencies]
serde_derive = "1.0"
serde_test = "1.0.176"
